<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:key="pref_cat_config"
        android:title="@string/pref_cat_config_title">
        
		    <PreferenceScreen 
		            android:key="pref_cat_statusbar"
		            android:title="@string/pref_cat_statusbar_title">
		    <EditTextPreference
		        android:dialogTitle="@string/pref_texto_relogio_dialogTitle"
		        android:key="pref_texto_relogio"
		        android:summary="@string/pref_texto_relogio_summary"
		        android:title="@string/pref_texto_relogio_title" />
		    
		    <SwitchPreference
		        android:defaultValue="false"
		        android:key="pref_texto_esquerdo"
		        android:summary="@string/pref_texto_esquerdo_summary"
		        android:title="@string/pref_texto_esquerdo_title" />
		    
		    <SwitchPreference
		        android:defaultValue="false"
		        android:key="pref_position"
		        android:summary="@string/pref_position_summary"
		        android:title="@string/pref_position_title" />
		    
		    </PreferenceScreen>
		    
		    <PreferenceScreen 
		            android:key="pref_cat_statusbar_colors"
		            android:title="@string/pref_cat_statusbar_colors_title">
		
		            <net.margaritov.preference.colorpicker.ColorPickerPreference 
		                android:key="pref_color"
		        		android:title="@string/pref_color_title"
		                android:summary="@string/pref_color_summary"
		                 />
		        </PreferenceScreen>
		        
		    <ListPreference
		            android:key="pref_estilo_fonte"
		            android:entries="@array/pref_estilo_fonte"
		            android:entryValues="@array/pref_estilo_fonte_values"
		            android:summary="@string/pref_estilo_fonte_summary"
		            android:title="@string/pref_estilo_fonte_title"/>
		        
		    <ListPreference
		            android:key="pref_tamanho_fonte"
		            android:entries="@array/pref_tamanho_fonte"
		            android:entryValues="@array/pref_tamanho_fonte_values"
		            android:summary="@string/pref_tamanho_fonte_summary"
		            android:title="@string/pref_tamanho_fonte_title" />
    
 </PreferenceCategory>
            
        <PreferenceCategory
        android:key="pref_cat_about"
        android:title="@string/pref_cat_about_title">

        <Preference
            android:key="pref_about" 
            android:summary="@string/pref_about_summary" />



    	</PreferenceCategory>


   
</PreferenceScreen>